He cambiado las imagenes por Pictures

--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
                             </h2>
                         </div>
                     </div>
-                    <img src="img/mesa.jpg" />
+                    <picture>
+                        <source
+                            srcset="
+                                ./img/mesaLimpia.webp    1x,
+                                ./img/mesalimpia@2.webp 2x"
+                            media="(min-width:1200px)"
+                        />
+                        <img src="" alt="Mano que sujeta boli" />
+                    </picture>
                 </div>
                 
                 <!-- Slider 02 -->
@@ -53,7 +61,15 @@
                         </div>
                     </div>
 
-                    <img src="img/manoBoli.jpg" />
+                    <picture>
+                        <source
+                            srcset="
+                                ./img/mesa.webp    1x,
+                                ./img/mesa@2.webp 2x"
+                            media="(min-width:1200px)"
+                        />
+                        <img src="" alt="Mano que sujeta boli" />
+                    </picture>
                 </div>
                 <!-- Slider 03 -->
                 <div class="slider">
@@ -70,7 +86,15 @@
                         </div>
                     </div>
 
-                    <img src="img/mesaLimpia.jpg" />
+                    <picture>
+                        <source
+                            srcset="
+                                ./img/manoBoli.webp    1x,
+                                ./img/manoBoli@2.webp 2x"
+                            media="(min-width:1200px)"
+                        />
+                        <img src="" alt="Mano que sujeta boli" />
+                    </picture>
                 </div>
                 <!-- Slider 04 -->
                 
